@@ -2,8 +2,8 @@
 
 
 
-Previous version: 2.04		(04/01/2006)
-Current version:  2.05		(17/02/2006)
+Previous version: 2.05		(17/02/2006)
+Current version:  2.06		(22/02/2006)
 
 SubVersion (CVS) revision: $Id$
 
@@ -26,23 +26,22 @@ New capabilities:
 Improvements:
 -------------
 
-	- feature request #1430263: better error handling when state file is deleted
+	- skin is now scaled directly from JPEG image => no resolution lost (forum)
 		
 		
 Bug fixes:
 ----------
 
-	- reverted back to GTK+ 2.6
-	- fixed bug #1425569 ("Error code not found" when sending 
-		file to Voyage200). TiEmu didn't allow sending of a 92+ FLASH app on V200
-		due to a too restrictive check.
-	- bug #1388306 fixed: "can't send FLASH app"
+	- #1434625: display a better error message when attempting to
+		load a state image targetted for another hand-held model
+	- #1434625: allow direct loading of a state image and associated image.
+	- #1436138: V200 screen bigger than the skin
 	
 
 Planned:
 --------
 
-	- TiEmu v3.00 with GDB support
+	- nothing: stable branch
 
 	
 Notes:
