@@ -1019,6 +1019,19 @@ int rcfile_default()
 	return 0;
 }
 
+static int is_win_xp(void)
+{
+	OSVERSIONINFO os;
+
+	memset(&os, 0, sizeof(OSVERSIONINFO));
+	os.dwOSVersionInfoSize = sizeof(OSVERSIONINFO);
+  	GetVersionEx(&os);
+	printf("OS: %i.%i %i %s\n", os.dwMajorVersion, os.dwMinorVersion, 
+		os.dwBuildNumber, os.szCSDVersion);
+
+	return (os.dwPlatformId == VER_PLATFORM_WIN32_NT && os.dwMajorVersion >= 5);
+}
+
 void options3_set_default(void)
 {
 	// Optimized for 1024x768
@@ -1086,7 +1099,10 @@ void options3_set_default(void)
 	options3.iop.minimized = 0;
 
 #ifdef __WIN32__
-	options3.transient = !0;
+	if(is_win_xp())
+		options3.transient = 0;
+	else
+		options3.transient = !0;
 #else
 	options3.transient = 0;
 #endif
