@@ -12,6 +12,7 @@ Bug:
 		load a state image targetted for another hand-held model
 	- [roms] $1987: fixed bug #1434625: allow direct loading of a state image and associated image.
 	- [roms] $1998: fixed #1436138: V200 screen bigger than the skin
+	- [roms] $2000: improved bug #1434606: "Calculator panel on the background"
 
 - 07/02/2006, version 2.05:
 	- [roms] $1904: fixed bug #1425569 ("Error code not found" when sending 
